[gd_scene load_steps=12 format=2]

[ext_resource path="res://components/RedLaser.gd" type="Script" id=1]
[ext_resource path="res://assets/images/red_glowing_circle.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0222222, 0.82963, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 0.3
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.6, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.0316456, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 0.9 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 500, 20, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 0.3
scale_curve = SubResource( 8 )

[node name="RedLaser" type="RayCast2D"]
cast_to = Vector2( 1000, 0 )
script = ExtResource( 1 )
damage = 10

[node name="OutLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 1000, 0 )
default_color = Color( 0.603922, 0, 0, 1 )

[node name="Tween" type="Tween" parent="OutLine"]

[node name="CenterLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 1000, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="Tween" type="Tween" parent="CenterLine"]

[node name="EmittingParticles" type="Particles2D" parent="."]
amount = 15
lifetime = 0.3
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="CollidingParticles" type="Particles2D" parent="."]
position = Vector2( 824, 0 )
rotation = 3.14159
emitting = false
amount = 15
lifetime = 0.3
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="BeamParticles" type="Particles2D" parent="."]
position = Vector2( 500, 0 )
amount = 15
visibility_rect = Rect2( -1, -1, 2, 200 )
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 3 )

[node name="RotateTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="PauseTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="EmissionTimers" type="Node2D" parent="."]

[node name="EmitTime" type="Timer" parent="EmissionTimers"]
process_mode = 0
one_shot = true

[node name="RestTime" type="Timer" parent="EmissionTimers"]
process_mode = 0
one_shot = true

[node name="PowerUpTime" type="Timer" parent="EmissionTimers"]
process_mode = 0
one_shot = true
